AutoscalingGroup/SecurityGroups.yml
AWSTemplateFormatVersion: 2010-09-09
Description: SAMPLE Security Group
Parameters:
  ReferenceStackName:
    Description: Main stack name
    Type: String
    Default: SAMPLE
  ParentStackName:
    Description: Main stack name
    Type: String
    Default: SAMPLE
Resources:
  EC2SecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: EC2 Security Group
      VpcId: 
        Fn::ImportValue: !Sub '${ParentStackName}-VPC-VpcId'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: 0.0.0.0/0
  MqttSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Mqtt Security Group
      VpcId: 
        Fn::ImportValue: !Sub '${ParentStackName}-VPC-VpcId'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '1883'
          ToPort: '1883'
          CidrIp: 0.0.0.0/0
  RdsSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: RDS Security Group
      VpcId: 
        Fn::ImportValue: !Sub '${ParentStackName}-VPC-VpcId'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '3306'
          ToPort: '3306'
          SourceSecurityGroupId: !GetAtt 
            - EC2SecurityGroup
            - GroupId
Outputs:
  EC2SecurityGroup:
    Description: EC2 Security Group ID
    Value: !Ref EC2SecurityGroup
    Export:
      Name: !Sub '${AWS::StackName}-EC2SecurityGroupId'
  MqttSecurityGroupId:
    Description: MqttSecurityGroup ID
    Value: !Ref MqttSecurityGroup
    Export:
      Name: !Sub '${AWS::StackName}-MqttSecurityGroupId'
  RdsSecurityGroupId:
    Description: RDS SecurityGroup ID
    Value: !Ref RdsSecurityGroup
    Export:
      Name: !Sub '${AWS::StackName}-RdsSecurityGroupId'
